fix fex-wrap for ie11; replace promise to async/await

--- a/assets/style.css
+++ b/assets/style.css
@@ -7,6 +7,7 @@
     align-items: center;
 }
 .content-area {
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
